# robotica_clone

./: README.md  cono_rojo.sdf  mapa.npz  mi_mapa.csv  mi_mapa.npz
meshes/: cone.stl
mi_mapa.npz/: grid.npy  origin_x.npy  origin_y.npy  resolution.npy
ros_ws/: mapa.csv  mapa_slam_laberinto_practica.npz  mapa_slam_laberinto_real.npz  plot_map.py  save_map.py
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/algoritmos/share/algoritmos/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/custom_msgs/share/custom_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
ros_ws/install/partea/lib/partea/: map_saver_node  slam_node
ros_ws/install/partea/share/partea/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/log/: latest_build
ros_ws/src/algoritmos/: package.xml  setup.cfg  setup.py
ros_ws/src/algoritmos/algoritmos/: occupancy_grid.py  path_following.py  path_planning.py  scan_matching.py
ros_ws/src/partea/: package.xml  setup.cfg  setup.py
ros_ws/src/partea/partea/: slam_node.py
ros_ws/src/parteb/: package.xml  setup.cfg  setup.py
ros_ws/src/parteb/parteb/: nodo_principal.py
ros_ws/src/partec/: package.xml  setup.cfg  setup.py
ros_ws/src/partec/launch/: partec.launch.py  rviz.rviz  rviz_real.rviz
ros_ws/src/partec/partec/: state_machine.py  vision_node.py
ros_ws/src/rviz/: rviz2_config_B.rviz  rviz2_config_B_real.rviz  rviz_slam.rviz  rviz_slam_real.rviz
(+86 files in other folders)
