<?xml version="1.0"?>
<package format="3">
  <name>algoritmos</name>
  <version>0.0.1</version>
  <description>Algoritmos compartidos</description>
  <maintainer email="tu@email.com">tu_nombre</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>